--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 			<div class="languages">
 				<h2>关于我的小作品demo</h2>
 					<ul>
-						<li>Myanmar / Thai</li>
-						<li>English / Spanish</li>
-						<li>Chinese / Japanese</li>
-						<li>Arabic / Hebrew</li>
+						<li><a href="./weijingsuo/index.html">微金所 bootstrap响应式布局</a></li>
+						<li><a href="./shopcart/index.html">购物车宣传页 动画制作</a></li>
+						<li><a href="./QQTIM/index.html">QQTIM 视察滚动效果</a></li>
+						<li><a href="./jdmobile/index.html">京东手机版</a></li>
 					</ul>
 			</div>
 		</div>
@@ -108,21 +108,22 @@
 	<div class="row">
 		<div class="col-md-4 col-sm-12">
 			<div class="contact">
-				<h2>Contact</h2>
-					<p><i class="fa fa-map-marker"></i> 123 Rama IX Road, Bangkok</p>
-					<p><i class="fa fa-phone"></i> 010-020-0890</p>
-					<p><i class="fa fa-envelope"></i> easy@company.com</p>
-					<p><i class="fa fa-globe"></i> www.company.com</p>
+				<h2>联系方式</h2>
+					<p><i class="fa fa-map-marker"></i> 广东佛山</p>
+					<p><i class="fa fa-phone"></i> 13336489556</p>
+					<p><i class="fa fa-envelope"></i> 404171942@qq.com</p>
 			</div>
 		</div>
 		<div class="col-md-8 col-sm-12">
 			<div class="experience">
-				<h2 class="white">Experiences</h2>
+				<h2 class="white">校园活动</h2>
 					<div class="experience-content">
-						<h4 class="experience-title accent">Website Development</h4>
-						<h5>New Media Company</h5><span></span>
-						<h5>2035 January - 2036 April</h5>
-						<p class="education-description">Cras porta tincidunt sem, in sollicitudin lorem efficitur ut. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+						<h5 class="experience-title accent">光微科技节</h5><span></span>
+						<h5 class="experience-date accent">2015 January - 2015 March</h5>
+						<p class="education-description">参与校举办“光微科技节”与组员合作制作了51单片机的寻迹小车。</p>
+						<h5 class="experience-title accent">毕业设计内容</h5><span></span>
+						<h5 class="experience-date accent">2018 January - 2018 July</h5>
+						<p class="education-description">深度学习：”基于深度学习的手势识别”。工具箱使用的是matconvnet，对 ASL（美国手势语言）数据库（24类，1w+张图片）用vgg，alexnet的模型进行 CNN训练。最后准确率有96%.</p>
 					</div>
 			</div>
 		</div>
@@ -134,7 +135,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<p>Copyright &copy; 2018.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+				<p>Attitude decides everything, detail decides success or failure.</p>
 				<ul class="social-icons">
 					<li><a href="#" class="fa fa-facebook"></a></li>
                     <li><a href="#" class="fa fa-google-plus"></a></li>
