--- a/shopcart/index.html
+++ b/shopcart/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>购物车宣传页</title>
     <link rel="stylesheet" href="css/jquery.fullpage.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
