--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Hi,i'm Charrming</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- stylesheet css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
