--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse">
 
-<!-- preloader section -->
 <div class="preloader">
 	<div class="sk-spinner sk-spinner-wordpress">
        <span class="sk-inner-circle"></span>
      </div>
 </div>
 
-<!-- header section -->
 <header>
 	<div class="container">
 		<div class="row">
@@ -34,17 +32,63 @@
 
 <section class="container">
 	<div class="row">
-		<div class="col-md-6 col-sm-12">
-			<div class="about">
+		<div class="col-md-4 col-sm-12">
+			<div class="about" style="padding-bottom: 20px;margin-top: 30px">
 				<h3 class="accent">个人基本信息</h3>
-				<br>
-				<h5><b>福建华侨大学 物联网工程</b
+				<h5 style="font-size: 18px;padding-top: 15px"><b>福建华侨大学 物联网工程</b
 					></h5>
-				<p><b>于18年从大学毕业,虽所读专业并没有前端课程,但因为喜欢这门语言喜欢制作网页所以尝试自学至此。天赋不强但有认真投入的态度，十分渴望参与到前端开发工作当中！</b></p>
+				<p style="padding-top: 10px"><b>于18年6月本科毕业,我喜欢前端语言和制作网页，虽然在本科专业课程中没有设置相关课程，但我通过自学"前端三剑客",php,vue等，也开始能制作出一些网页。我有着对前端开发工作极其浓厚的兴趣，也做好了认真投入前端开发工作的准备!</b></p>
 			</div>
 		</div>
-		<div class="col-md-6 col-sm-12">
-			<div class="skills" style="padding-top:20px">
+		<div class="col-md-8 col-sm-12">
+			<div class="experience">
+				<h2 class="white">校园活动</h2>
+					<div class="experience-content">
+						<h5 class="experience-title accent">光微科技节</h5><span></span>
+						<h5 class="experience-date accent">2015 January - 2015 March</h5>
+						<p class="education-description">参与校举办“光微科技节”与组员合作制作了51单片机的寻迹小车。</p>
+						<h5 class="experience-title accent">毕业设计内容</h5><span></span>
+						<h5 class="experience-date accent">2018 January - 2018 July</h5>
+						<p class="education-description">深度学习：”基于深度学习的手势识别”。工具箱使用的是matconvnet，对 ASL（美国手势语言）数据库（24类，1w+张图片）用vgg，alexnet的模型进行 CNN训练。最后准确率有96%.</p>
+					</div>
+			</div>
+		</div>		
+	</div>
+</section>
+
+<section class="container">
+	<div class="row">
+		<div class="col-md-8 col-sm-12">
+			<div class="education">
+				<h2 class="white">个人能力</h2>
+					<div class="myskill-content">
+						<p>*熟练使用HTML、CSS和JavaScript,有H5&C3经验；能将设计转化为符合规范的 DIV+CSS页面;</p>
+						<p>*掌握Jquery库的使用，了解各主流浏览器间的兼容性问题;</p>
+						<p>*了解移动web适配问题，使用过Bootstrap框架做响应式页面；使用过MUI框架做电商前台页面;</p>
+						<p>*掌握ajax与后端进行api对接交互;了解PHP和基本MySQL语句；</p>
+						<p>*关于Vue,目前还在钻研,做过仿外卖app的挑菜页面。</p>
+					</div>
+			</div>
+		</div>
+	
+		<div class="col-md-4 col-sm-12">
+			<div class="languages">
+				<h2>关于我的小作品demo</h2>
+					<ul>
+						<li><a href="./weijingsuo/index.html">微金所 bootstrap响应式布局</a></li>
+						<li><a href="./shopcart/index.html">购物车宣传页 动画制作</a></li>
+						<li><a href="./QQTIM/index.html">QQTIM 视察滚动效果</a></li>
+						<li><a href="./jdmobile/index.html">京东手机版</a></li>
+					</ul>
+			</div>
+		</div>		
+	</div>
+</section>
+
+<section class="container">
+	<div class="row">
+		<div class="col-md-8 col-sm-12 col-md-push-4">
+			<div class="skills" style="padding-top:20px;margin-top: 30px">
 				<h3 class="white">技能评价</h3>
 				<strong>CET-4 计算机二级</strong>
 				<span class="pull-right">50%</span>
@@ -71,42 +115,8 @@
                         aria-valuenow="80%" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 					</div>					
 			</div>
-		</div>
-	</div>
-</section>
-
-<section class="container">
-	<div class="row">
-		<div class="col-md-8 col-sm-12">
-			<div class="education">
-				<h2 class="white">个人能力</h2>
-					<div class="myskill-content">
-						<p>*熟练使用HTML、CSS和JavaScript,有H5&C3经验；能将设计转化为符合规范的 DIV+CSS页面;</p>
-						<p>*掌握Jquery库的使用，了解各主流浏览器间的兼容性问题;</p>
-						<p>*了解移动web适配问题，使用过Bootstrap框架做响应式页面；使用过MUI框架做电商前台页面;</p>
-						<p>*掌握ajax与后端进行api对接交互;了解PHP和基本MySQL语句；</p>
-						<p>*关于Vue,目前还在钻研,做过仿外卖app的挑菜页面。</p>
-					</div>
-			</div>
-		</div>
-		<div class="col-md-4 col-sm-12">
-			<div class="languages">
-				<h2>关于我的小作品demo</h2>
-					<ul>
-						<li><a href="./weijingsuo/index.html">微金所 bootstrap响应式布局</a></li>
-						<li><a href="./shopcart/index.html">购物车宣传页 动画制作</a></li>
-						<li><a href="./QQTIM/index.html">QQTIM 视察滚动效果</a></li>
-						<li><a href="./jdmobile/index.html">京东手机版</a></li>
-					</ul>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- contact and experience -->
-<section class="container">
-	<div class="row">
-		<div class="col-md-4 col-sm-12">
+		</div>			
+		<div class="col-md-4 col-sm-12 col-md-pull-8">
 			<div class="contact">
 				<h2>联系方式</h2>
 					<p><i class="fa fa-map-marker"></i> 广东佛山</p>
@@ -114,23 +124,9 @@
 					<p><i class="fa fa-envelope"></i> 404171942@qq.com</p>
 			</div>
 		</div>
-		<div class="col-md-8 col-sm-12">
-			<div class="experience">
-				<h2 class="white">校园活动</h2>
-					<div class="experience-content">
-						<h5 class="experience-title accent">光微科技节</h5><span></span>
-						<h5 class="experience-date accent">2015 January - 2015 March</h5>
-						<p class="education-description">参与校举办“光微科技节”与组员合作制作了51单片机的寻迹小车。</p>
-						<h5 class="experience-title accent">毕业设计内容</h5><span></span>
-						<h5 class="experience-date accent">2018 January - 2018 July</h5>
-						<p class="education-description">深度学习：”基于深度学习的手势识别”。工具箱使用的是matconvnet，对 ASL（美国手势语言）数据库（24类，1w+张图片）用vgg，alexnet的模型进行 CNN训练。最后准确率有96%.</p>
-					</div>
-			</div>
-		</div>
 	</div>
 </section>
 
-<!-- footer section -->
 <footer>
 	<div class="container">
 		<div class="row">
