--- a/wyx/index.html
+++ b/wyx/index.html
@@ -33,7 +33,8 @@
     .swiper-slide2 {
         text-align: center;
         font-size: 18px;
-        background: #fff;
+        background: #111;
+        color: #fff;
         
         /* Center slide text vertically */
         display: -webkit-box;
@@ -48,22 +49,6 @@
         -ms-flex-align: center;
         -webkit-align-items: center;
         align-items: center;
-    }
-	.swiper-slide2:nth-child(2){
-		background:#fff;
-		color:#000;
-    }
-    .swiper-slide2:nth-child(3){
-        background:#111;
-        color:#fff;
-    }
-    .swiper-slide2:nth-child(4){
-        background:yellow;
-        color:#000;
-    }
-    .swiper-slide2:nth-child(5){
-        background:pink;
-        color:#fff;
     }
 	.swiper-slide2 .page{
 		transform:translateX(-200px);
@@ -83,7 +68,22 @@
         transform:translateY(0);
         opacity:1;
     }
-
+.swiper-slide2 .page3{
+        transform:translateY(-200px);
+        opacity:0;
+        transition:all 10s;
+    }
+    .ani-slide1 .page3{
+        transform:translateY(0);
+        opacity:1;
+    }    
+.swiper-slide2 .page5{
+        opacity:0;
+        transition:all 2s;
+    }
+    .ani-slide1 .page5{
+        opacity:1;
+    }
 
 
     .swiper-container1 {
@@ -96,10 +96,103 @@
       background-size: cover;
       width: 300px;
       height: 300px;
-    }       
+    } 
+  /*按钮页开始*/
+  .main {
+    width: 80%;
+    text-align: center;
+    display: block;
+  }
+  button {
+    //height: 40px;
+    width: 30%;
+    -webkit-appearance: none;  //取消默认的样式(按钮变成椭圆形了)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  //取消默认的点击高亮
+    //border: 1px solid #ccc;
+    //border-radius: 20px;
+    background-color: #111;
+    color: pink;
+    font-size:700;
+    border-color: pink;
+    font-size: 20px;
+  }
+  .no.shake {
+    animation: shake 1s; 
+  }
+  @keyframes shake {
+    0% {
+      transform: translate3d(0,0,0);
+    }
+    25% {
+      transform: translate3d(25%,0,0);
+    }
+    50% {
+      transform: translate3d(-25%,0,0);
+    }
+    75% {
+      transform: translate3d(25%,0,0);
+    }
+    100% {
+      transform: translate3d(0,0,0);
+    }
+  }  
+  /*按钮页结束*/
+/*    .main.qshow{
+      display: block;
+    }*/
+    .main.qhide {
+      display: none;
+    }
+    .txt h2 {
+      color: pink;
+    }
+    .swiper-pagination-bullet-active {
+      background: pink;
+    }
+    .p3txt {
+      opacity: 0;
+      font-size: 20px;
+    }    
+    .p3.ani-slide1 .pp1{
+      opacity: 1;
+      transition: all 1s linear;
+    }
+    .p3.ani-slide1 .pp2{
+      opacity: 1;
+      transition: all 1s linear 1s;
+    }
+    .p3.ani-slide1 .pp3{
+      opacity: 1;
+      transition: all 1s linear 2s;
+    }
+    .p3.ani-slide1 .pp4{
+      opacity: 1;
+      transition: all 1s linear 3s;
+    }
+    .p3.ani-slide1 .pp5{
+      opacity: 1;
+      transition: all 1s linear 4s;
+    }
+    .p3.ani-slide1 .pp6{
+      opacity: 1;
+      transition: all 1s linear 5s;
+    }
+    .p3.ani-slide1 .pp7{
+      opacity: 1;
+      transition: all 1s linear 6s;
+    }
+    .p3.ani-slide1 .pp8{
+      opacity: 1;
+      transition: all 1s linear 7s;
+    }.p3.ani-slide1 .pp9{
+      opacity: 1;
+      transition: all 1s linear 8s;
+    }
     </style>
 </head>
 <body>
+<audio id="music" src="./music.mp3" autoplay preload>
+</audio>
     <!-- Swiper -->
     <div class="swiper-container swiper-container-vertical">
         <div class="swiper-wrapper swiper-wrapper1">
@@ -132,14 +225,107 @@
                 <div class="swiper-pagination1 swiper-pagination-bullets"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>               
             </div>
-            <!-- page3 -->
+
+            <!-- page4 -->
             <div class="swiper-slide swiper-slide2">
-                <canvas id="world" width="980" height="2484"></canvas>
+              <div id="question1" class="main qshow">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>我觉得你漂亮吗？</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" onclick="nextQ('question1','question2')" style="margin-right: 10%;">漂亮</button>
+                  <button type="button" class="no">不</button>
+                </div>
+              </div>
+              <div id="question2" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>只是喜欢你漂亮吗</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" class="no" style="margin-right: 10%;">是</button>
+                  <button type="button" onclick="nextQ('question2','question3')">不是</button>  
+                </div>
+              </div>
+              <div id="question3" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>还喜欢你什么？</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" onclick="nextQ('question3','question4')" style="margin-right: 10%;">活泼聪明调皮灵敏善良勇敢相互关心</button>
+                  <button type="button" class="no">没有</button>
+                </div>
+              </div>
+              <div id="question4" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>那你爱我吗</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" onclick="nextQ('question4','question5')" style="margin-right: 10%;">爱</button>
+                  <button type="button" class="no">不</button>
+                </div>
+              </div>
+              <div id="question5" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>好，你在干嘛呢</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" onclick="nextQ('question5','question6')" style="margin-right: 10%;">想你</button>
+                  <button type="button" class="no">其他</button>
+                </div>
+              </div>
+              <div id="question6" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>乖，让你亲一口</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" onclick="nextQ('question6','question7')" style="margin-right: 10%;">啵</button>
+                  <button type="button" class="no">我不</button>
+                </div>
+              </div>
+              <div id="question7" class="main qhide">
+                <div class="topBar">
+                  <div class="txt">
+                    <h2>那再亲一口</h2>
+                  </div>
+                </div>
+                <div class="bottomBar">
+                  <button type="button" class="no" style="margin-right: 10%;">不亲</button>
+                  <button type="button" onclick="alert('MUA~~')">啵</button>
+                </div>
+              </div>           
             </div>
-            <div class="swiper-slide swiper-slide2"><p>Slide 4</p></div>
-            <div class="swiper-slide swiper-slide2"><p>Slide 5</p></div>
+            <!-- page3 -->
+            <div class="swiper-slide swiper-slide2 p3">
+              <div style="width: 300px;height: 100vh;">
+                <p class="p3txt pp1">"星光穿透深厚云海"</p>
+                <p class="p3txt pp2">"跨越数亿光年来到这个蔚蓝星球"</p>
+                <p class="p3txt pp3">"而你眸光跨过潮汐人潮"</p>
+                <p class="p3txt pp4">"准确地降落在我的星球"</p>
+                <p class="p3txt pp5">终于找到个人能说这段话啦</p>
+                <p class="p3txt pp6">原谅我不会说话</p>
+                <p class="p3txt pp7">希望我们能天天开心</p>
+                <p class="p3txt pp8">希望我们能到很遥远的未来</p>
+                <p class="p3txt pp9">好不好，小确幸</p>
+              </div>
+            </div>            
+            <!-- page5 -->
+            <div class="swiper-slide swiper-slide2" style="position: relative;">
+              <p class="page5" style="width: 20px;font-size: 18px;font-weight: 700;position: absolute;top: 20%;left: 48%;">最后猪你生日快乐撒花</p>
+                <canvas class="page3" id="world" width="980" height="2484"></canvas>            
+            </div>
         </div>
-<!--         <div class="swiper-pagination swiper-pagination-bullets"><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div> --> 
     <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 </body>
 
@@ -308,6 +494,62 @@
     var day1 = new Date("2019/2/25"); 
     var day2 = new Date();
     var date = Math.floor((day2-day1)/(1000 * 60 * 60 * 24));
-    $('#date').html(date);    
+    $('#date').html(date);
+
+    var no = document.querySelectorAll('.no');
+    console.log(no);
+    for(var i = 0; i < no.length; i++){
+      no[i].onclick=function(e){
+        console.log(e.target);
+        var target = e.target;
+        target.classList.add('shake');
+        target.addEventListener("animationend", function(){
+          target.classList.remove('shake');
+        });        
+      }
+    }
+
+    function nextQ(now,next) {
+      $('#'+now).hide(function(){
+        $('#'+next).fadeIn(2000);
+      });    
+      //document.getElementById(now).classList.remove('qshow');
+      //document.getElementById(next).classList.add('qshow');
+    }
+
+
+//重写alert
+ window.alert = function(name){
+ var iframe = document.createElement("IFRAME");
+iframe.style.display="none";
+iframe.setAttribute("src", 'data:text/plain,');
+document.documentElement.appendChild(iframe);
+window.frames[0].window.alert(name);
+iframe.parentNode.removeChild(iframe);
+}
+
+
+// function audioAutoPlay(id){  
+//     var audio = document.getElementById(id),  
+//         play = function(){  
+//             audio.play();
+//             document.removeEventListener("touchstart",play, false);  
+//         };  
+//     /*audio.play();*/
+//     document.addEventListener("WeixinJSBridgeReady", function () {  
+//         audio.play();
+//     }, false);  
+//     // document.addEventListener('YixinJSBridgeReady', function() {  
+//     //     play();
+//     // }, false);  
+//     document.addEventListener("touchstart",play, false);  
+// };
+// audioAutoPlay('Jaudio');
+// 
+document.addEventListener('WeixinJSBridgeReady',function(){  
+    alert('猪宝贝欢迎您~');
+    $('#music')[0].play();  
+
+},false);
 </script>
 </html>
