--- a/wyx/index.html
+++ b/wyx/index.html
@@ -151,7 +151,8 @@
     }
     .p3txt {
       opacity: 0;
-      font-size: 20px;
+      font-size: 22px;
+	color: pink;
     }    
     .p3.ani-slide1 .pp1{
       opacity: 1;
